--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "General query functions and types.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "push": "npm run compile & git add . & git commit -m \"Save\" & git push",
+    "compile": "npm run clean & tsc -p .",
+    "clean": "node -e \"require('fs').rmSync('./dist', { recursive: true, force: true })\""
   },
   "repository": {
     "type": "git",
