--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "module": "commonjs",
-    "rootDir": "./",
+    "rootDir": "./src",
     "outDir": "./dist",
     "moduleResolution": "node",
     "resolveJsonModule": true,
@@ -17,6 +17,5 @@
     "strict": true,
     "noImplicitAny": true,
     "allowSyntheticDefaultImports": true,
-  },
-  "exclude": ["node_modules", "dist"]
+  }
 }
